--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -7,6 +7,10 @@ Investigate new Zyn voice parameters AddSynth voice:
 Currently we load and save them (for compatibility) but make
 no use of them.
 
+Investigate A = 440 in modulator
+
+<par_bool name="fixed_freq" value="yes" />
+
 Also, Pitchwheel split range in Controllers, but that one seems
 a bit pointless to me!
 
