--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-5-28 Will
+- Vector control 'Clear' implemented.
+- Improved Vector GUI structure.
+
 2016-5-27 Will
 - Mixer sliders now right click to home position.
 - All vector options implemented except 'Clear'.
