--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-5-29 Will
 - Implemented Zyn. compatible AddSynth modulator fixed frequency.
 - Updated some docs.
+- Implemented Zyn. compatible PWM modulator.
 
 2016-5-28 Will
 - Vector control 'Clear' implemented.
