--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.3.x
 - Implemented Zyn. compatible AddSynth modulator fixed frequency.
 - Updated some docs.
 - Implemented Zyn. compatible PWM modulator.
+- Bugfix: MORPH modulator is now correct.
 
 2016-5-28 Will
 - Vector control 'Clear' implemented.
