--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.3.x
 - All horizontal sliders now home on a right click.
 - Made GUI sliders clearer and more consistent.
 - More doc updates.
+- Added brackets to some code to remove possible ambiguity.
 
 2016-5-29 Will
 - Implemented Zyn. compatible AddSynth modulator fixed frequency.
