--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.3.x
 - Made GUI sliders clearer and more consistent.
 - More doc updates.
 - Added brackets to some code to remove possible ambiguity.
+- Vector instruments now have the engine colours.
 
 2016-5-29 Will
 - Implemented Zyn. compatible AddSynth modulator fixed frequency.
