Reviewed instrument name boxes to make them clearer. Partial implementation of pitch bend adjust and offset. Vector name box always now has text.

--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,10 +1,10 @@
 
-Investigate new Zyn voice parameters AddSynth voice:
+Complete new Zyn voice parameters AddSynth voice:
 
 <par name="bend_adjust" value="88" />
 PBendAdjust
 <par name="offset_hz" value="64" />
-PoffsetHz
+POffsetHz
 
 Currently we load and save them (for compatibility) but make
 no use of them.
