--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.3.x
 
 2016-5-31 Will
 - Reviewed instrument name boxes to make them clearer.
+- Partial implementation of pitch bend adjust and offset.
+- Vector name box always now has text.
 
 2016-5-30 Will
 - Bugfix: Default resonance was showing 30dB but was actually 20dB.
