--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.3.x
 - Reviewed instrument name boxes to make them clearer.
 - Partial implementation of pitch bend adjust and offset.
 - Vector name box always now has text.
+- Updated tooltips.
 
 2016-5-30 Will
 - Bugfix: Default resonance was showing 30dB but was actually 20dB.
