--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2016-6-1 Will
+- Completed implementation of pitch bend adjust and offset.
+- Corrected wrong opening tab in PadSynth window.
+
 2016-5-31 Will
 - Reviewed instrument name boxes to make them clearer.
 - Partial implementation of pitch bend adjust and offset.
