--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,10 @@ yoshimi 1.3.x
 2016-6-1 Will
 - Completed implementation of pitch bend adjust and offset.
 - Corrected wrong opening tab in PadSynth window.
+- Vector window now fully in sync with rest of GUI.
+- Voice list controls identified.
+- Docs updated.
+- Master version set for rc1.
 
 2016-5-31 Will
 - Reviewed instrument name boxes to make them clearer.
