--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
-yoshimi 1.3.x
+yoshimi 1.4.0 rc2
+
+2016-6-2 Will
+- Bugfix: vector 'Clear' was removing all vector names.
+- Added 'Clear All' to vector options.
+- Forgot to ID the mixer panel controls :(
+
+yoshimi 1.4.0 rc1
 
 2016-6-1 Will
 - Completed implementation of pitch bend adjust and offset.
