--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+yoshimi 1.4.0 rc4
+
+2016-6-7 Will
+- Brought in extended slider controls from Rob's ideas.
+- Modifed knobs for similar mouse wjheel behaviour.
+- Bumped rc version.
+
 yoshimi 1.4.0 rc3
 
 2016-6-7 Chris
