--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,13 @@
+yoshimi 1.4.0 rc5
+
+2016-6-10 Will
+- Bugfix: Subsynth & Oscillator harmonics fundamental homed wrongly.
+- Bugfix: Virtual keyboard controler showed wrong home setting.
+- Made all forms of vector incoming CC initialising consistent.
+  Available parts incremented if necessary & parts enabled.
+- Setting GUI incoming CC only set to 14 if a lower value entered.
+- More adjustments to knobs and sliders.
+
 yoshimi 1.4.0 rc4
 
 2016-6-7 Will
