--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.4.x
 * Moved GUI ID files from SynthEngine to InterChange.
 * Moved CmdInterface to Interface directory.
 * Implemented direct CLI access to some part controls.
+* Implemented ring buffer between interchange and final sound.
 
 2016-6-26 Will
 * Added GUI warnings when audio or midi not availalble.
