--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.4.x
 2016-6-29 Will
 * Implimented direct access to part controllers and up to Kits.
 * Updated docs.
+* Completed kit level direct access.
+* Revised some control values.
 
 2016-6-28 Will
 * Adjusted some GUI engine numbers so they all match.
