Small doc updates - no code changes

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.4.x
 
+2016-7-5 Will
+* Small doc updates - no code changes.
+
 2016-7-1 Will
 * Small format change in GUI access reports.
 * doc updates, including new file /dev_notes/Direct_Access.txt
