Changed virtual keyboard roller to slider

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.4.x
 
+2016-7-14 Will
+* Changed virtual keyboard roller to slider.
+
 2016-7-5 Will
 * Small doc updates - no code changes.
 
