Bugfix: System effect sends wasn't reporting scroll wheel use. Added system and insertion base effect controls to direct access. Updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.4.x
 
+2016-7-27 Will
+* Bugfix: System effect sends wasn't reporting scroll wheel use.
+* Added system and insertion base effect controls to direct access.
+* Updated docs.
+
 2016-7-24 Will
 * Bugfix: Direct access reading harmonic values returned the wrong result.
 * Added missing direct access part controls. Dunno how I missed them :(
