Added load time (mS) to instrument load message New feature: Auto-load default state

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.x
 
+2016-8-4 Will
+* Added load time (mS) to instrument load message.
+* New feature: Auto-load default state.
+
 2016-8-2 Will
 * Applied gentoo build patches.
   (doesn't seem to make any difference to other distros)
