--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,15 @@
 yoshimi 1.4.x
 
+2016-8-6 Will
+* Started actual direct control of filters.
+* Added root and bank load times but in uS!
+* minor doc updates.
+
 2016-8-4 Will
 * Bugfix: At startup all enabled parts were registering direct O/P
   when not actualy directed to part/both.
 * Load time reporting now has its own switch.
-* Added 'switches' tab to Config window and moved them from 'Main'.
+* Added 'Switches' tab to Config window and moved them from 'Main'.
 
 2016-8-4 Will
 * Added load time (mS) to instrument load message.
