--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.4.x
 * Bugfix: CLI wasn't loading upper set instruments (128+).
 * Tidied up NRPN vector control.
 * Added more error messages to 'non fatal' category.
+* Implemented most of the direct access for filters.
+* Updated docs.
 
 2016-8-10 Will
 * Implemented simple internal text messaging system.
