--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.x
 
+2016-8-12 Will
+* Inproved direct access to filters - Only dynfilter to do now!.
+* Updated docs.
+
 2016-8-11 Will
 * Bugfix: CLI wasn't loading upper set instruments (128+).
 * Tidied up NRPN vector control.
