--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.x
 
+2016-8-13 Will
+* Moved LV2 root/bank/program change into ringbuffer and adjusted RT
+  priorites for best results when loading *huge* instrument patches.
+
 2016-8-12 Will
 * Inproved direct access to filters - Only dynfilter to do now!.
 * Updated docs.
