--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,3 +1,6 @@
+Need to investigate Config::showQuestionOrCmdWarning(
+Doesn't seem to be called, so temporarily commented out.
+
 
 Make add voice & add/pad oscillator windows show kit number & name.
 
