--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,6 +1,7 @@
 Need to investigate Config::showQuestionOrCmdWarning(
 Doesn't seem to be called, so temporarily commented out.
 
+Find out why LV2 only stores/retrieves patch sets (not state)
 
 Make add voice & add/pad oscillator windows show kit number & name.
 
