--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.4.1 M
 
+2016-9-10 Will
+* Completed direct access envelope free mode. Oh what fun :(
+  Switching from fixed to free and back still to be finalised.
+* Revised docs.
+
 2016-9-9 Will
 * Revised direct access, now needs 8 unsigned chars.
 * Implemented envelope direct controls (not free mode yet).
