--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.4.1 M
 
+2016-9-11 Will
+* Further updates to docs
+* New HTML copy of "Yoshimi Control Numbers".
+* No code changes.
+
 2016-9-10 Will
 * Completed direct access envelope free mode. Oh what fun :(
   Switching from fixed to free and back still to be finalised.
