CLI now strips trailing spaces. Implemented PadSynth direc access base controls Updated docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.4.1 M
 
+2016-9-17 Will
+* CLI now strips trailing spaces.
+* Implemented PadSynth direc access base controls.
+* Updated docs.
+
 2016-9-15 Will
 * Bugfix: direct access wasn't updating SubSynth overtones.
 * Replaced HTML version of control numbers with text version.
