Implemented most of oscillator direct access Updated and corrected docs

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.4.1 M
 
+2016-9-18 Will
+* Implemented most of oscillator direct access.
+* Updated and corrected docs.
+
 2016-9-17 Will
 * CLI now strips trailing spaces.
 * Implemented PadSynth direct access base controls.
