--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.4.1 M
 
+2016-9-23 Will
+* Removed duplicate enable Freq Filter command.
+* Bugfix: All Adsynth osc commands were going to the modulator.
+* Upgraded and tested build instructions.
+* Updated docs.
+
 2016-9-22 Will
 * Bugfix: direct access SubSynth Freq Env En was quite wrong :(
 * Updated docs.
