Temporarily reverted actual splash screen to original

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.4.1 M
 
+2016-9-25 Will
+* Temporarily reverted actual splash screen to original.
+
+2016-9-24 Will
+* merged splash updates from Jesper.
+
 2016-9-23 Will
 * Removed duplicate enable Freq Filter command.
 * Bugfix: All Adsynth osc commands were going to the modulator.
