--- a/INSTALL
+++ b/INSTALL
@@ -23,28 +23,20 @@ Extract source code archive:
     cd    /path/to/workDir
     tar -jxvf /path/to/yoshimi-1.4.1.tar.bz2
 
-Now there should be a directory for
+Now there should be a directory:
 
    /path/to/workDir/yoshimi-1.4.1
 
-Move into this directory
+This has a build directory inside. Move into this directory:
 
-    cd yoshimi-1.4.1
-
-Create a separate directory for build (if it is not already there). Spaces in fileName and directoryName can be problematic, try to avoid it.
-
-   mkdir build
-
-Move into it
-
-   cd build
-
-Run ccmake
-
-   ccmake ../src
+    cd yoshimi-1.4.1/build
 
 "/path/to/workDir/yoshimi-1.4.1/" is the source code directory.
-"/path/to/workDir/yoshimi/build" is now the current working directory, and will have make-related files (when ccmake is done with configuring and generate the files).
+"/path/to/workDir/yoshimi/build" is now the current working directory, and will have make-related files (when ccmake is done with configuring and generates the files).
+
+Run ccmake:
+
+   ccmake ../src
 
 Within ccmake, type 'c' (without the quotes) to generate a default configuration.  Type 'c' again to actually apply the current configuration data (repeat multiple times if needed).  If there are any missing pre-requisite libraries and/or softwares, it should prompt you with such info.  You can install such pre-requisite softwares and try these ccmake configuration steps again.
 
@@ -56,7 +48,7 @@ Next is to compile (build) the application:
 
    make
 
-When compilation is completed successfully, install it with:
+When compilation is completed successfully, install it (as root) with:
 
    make install
 
