More work on direct Vector access Updated docs Small corrections to GUI

--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,12 @@
 yoshimi 1.4.1 M
 
+2016-10-7 Will
+* Small corrections to GUI.
+* More work on direct Vector access.
+* Updated docs.
+
 2016-10-4 Will
-* Started implementing direct access to Vectors
+* Started implementing direct access to Vectors.
 
 2016-9-28 Will
 * Added more info to /dev_notes and /doc.
